...
            // User not found or invalid email/password combination
            Log.e("FirebaseAuthError", "Invalid user: ${e.message}")
            Result.failure(Exception("Invalid email or password. Please try again."))
        } catch (e: FirebaseAuthInvalidCredentialsException) {
            // Invalid credentials, password might be wrong
            val errorMessage = e.message
            Log.e("FirebaseAuthError", "Invalid credentials: ${e.message}")
            Result.failure(Exception("Invalid credentials $errorMessage"))
        } catch (e: FirebaseAuthException) {
            // Other Firebase Authentication errors (e.g., network issues, service errors)
            val errorCode = e.errorCode
            val errorMessage = e.message
            Log.e("FirebaseAuthError", "Error code: $errorCode, Message: $errorMessage")
...
